More work on StaticContextHandler testing